--- a/pom.xml
+++ b/pom.xml
@@ -106,5 +106,11 @@
     <artifactId>extentreports</artifactId>
     <version>2.40.2</version>
 </dependency>
+<dependency>
+    <groupId>io.rest-assured</groupId>
+    <artifactId>rest-assured</artifactId>
+    <version>3.2.0</version>
+    <scope>test</scope>
+   </dependency>
 	</dependencies>
 </project>
