--- a/src/test/resources/config/Config.properties
+++ b/src/test/resources/config/Config.properties
@@ -2,6 +2,7 @@ HomePageUrl=https://portal.acdt.edu.gh/v3
 EmailAddress=isapstester@isapsabstracts.org
 Password=isapstester@isapsabstracts.org
 
-Browser=firefox
-BrowserSync=60
-WebElementSync=45
+Browser=chrome
+BrowserSync=30
+WebElementSync=15
+Asana=https://app.asana.com/-/login?u=%2F-%2Fmy_tasks%3Futm_source%3Dasana_email%26utm_medium%3Dorganic_email%26utm_campaign%3DInvite_V2_1
