updated signup scenario with error message

--- a/src/test/resources/config/Config.properties
+++ b/src/test/resources/config/Config.properties
@@ -1,7 +1,7 @@
 HomePageUrl=https://portal.acdt.edu.gh/v3
 EmailAddress=isapstester@isapsabstracts.org
 Password=isapstester@isapsabstracts.org
-
+API_Country_Ccode_Url=https://portal.acdt.edu.gh/acdt-dev/countryCodes
 Browser=chrome
 BrowserSync=30
 WebElementSync=15
