--- a/pom.xml
+++ b/pom.xml
@@ -112,5 +112,15 @@
     <version>3.2.0</version>
     <scope>test</scope>
    </dependency>
+ <!--   <dependency>
+    <groupId>org.slf4j</groupId>
+    <artifactId>slf4j-api</artifactId>
+    <version>1.6.1</version>
+</dependency>
+<dependency>
+    <groupId>org.slf4j</groupId>
+    <artifactId>slf4j-simple</artifactId>
+    <version>1.6.1</version>
+</dependency> -->
 	</dependencies>
 </project>
