--- a/pom.xml
+++ b/pom.xml
@@ -3,12 +3,12 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.portal.acdt.edu</groupId>
-	<artifactId>AcdtEduTest</artifactId>
+	<groupId>com.portal.aucdt.edu</groupId>
+	<artifactId>AucdtEduTest</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>AcdtEduTest</name>
+	<name>AucdtEduTest</name>
 
 
 	<properties>
@@ -80,7 +80,7 @@
 						</goals>
 						<configuration>
 							<classpathScope>test</classpathScope>
-							<mainClass>com.acdt.edu.util.SendMail</mainClass>
+							<mainClass>com.aucdt.edu.util.SendMail</mainClass>
 						</configuration>
 					</execution>
 				</executions>
