create new class for file zipping and sending mail

--- a/src/test/resources/config/Config.properties
+++ b/src/test/resources/config/Config.properties
@@ -1,5 +1,5 @@
-#HomePageUrl=https://portal.acdt.edu.gh/v3
-HomePageUrl=https://portal.aucdt.edu.gh/admissions-dev/
+#HomePageUrl=https://portal.acdt.edu.gh/admissions-dev/
+HomePageUrl=https://portal.aucdt.edu.gh/uadmissions-dev/#/home
 EmailAddress=isapstester@isapsabstracts.org
 Password=isapstester@isapsabstracts.org
 API_Country_Ccode_Url=https://portal.acdt.edu.gh/acdt-dev/countryCodes
